--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
          </span>
       </div>   <!-- INTH_SNIPPET_BOTTOM -->
 <!-- UNILAND START -->
-<script type="text/javascript" src="https://uni-pov.orthofix.space/app/web/js/uniland.js?5f16a22979f27"></script>
+<script type="text/javascript" src="https://uni-pov.orthofix.space/app/web/js/uniland.js?5f16adcb0a613"></script>
 <script type="text/javascript">
     var scripts = [];
     start = Date.now();
@@ -474,8 +474,8 @@
     var uniland = new Uniland();
 
     uniland.prelandMode = 0;
-    uniland.landId = 741;
-    uniland.landUrl = "https://droc2u.github.io/balita/khusus?marker_id=1";
+    uniland.landId = 742;
+    uniland.landUrl = "https://beritakhusus.github.io/berita/?marker_id=1";
 
         //названия полей формы, откуда скрипт берет данные
     //    uniland.aliasName = 'name';
@@ -527,10 +527,11 @@
     setTimeout(init, 1000);
 </script>
 <noscript>
-    <div><img src="https://uni-pov.orthofix.space/app/web/api/pixel?land_id=741" style="position:absolute; left:-9999px;"
+    <div><img src="https://uni-pov.orthofix.space/app/web/api/pixel?land_id=742" style="position:absolute; left:-9999px;"
               alt=""/></div>
 </noscript>
 <!-- UNILAND END -->
+
 
 
    </body>
